// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacer Component renders correctly with default props 1`] = `
<View
  style={
    {
      "height": 16,
      "width": undefined,
    }
  }
/>
`;

exports[`Spacer Component renders horizontal spacer 1`] = `
<View
  style={
    {
      "height": undefined,
      "width": 16,
    }
  }
/>
`;

exports[`Spacer Component renders horizontal spacer with custom size 1`] = `
<View
  style={
    {
      "height": undefined,
      "width": 40,
    }
  }
/>
`;

exports[`Spacer Component renders vertical spacer 1`] = `
<View
  style={
    {
      "height": 16,
      "width": undefined,
    }
  }
/>
`;

exports[`Spacer Component renders with all size variants and both directions 1`] = `
<View
  style={
    {
      "height": undefined,
      "width": 4,
    }
  }
/>
`;

exports[`Spacer Component renders with all size variants and both directions 2`] = `
<View
  style={
    {
      "height": undefined,
      "width": 8,
    }
  }
/>
`;

exports[`Spacer Component renders with all size variants and both directions 3`] = `
<View
  style={
    {
      "height": undefined,
      "width": 16,
    }
  }
/>
`;

exports[`Spacer Component renders with all size variants and both directions 4`] = `
<View
  style={
    {
      "height": undefined,
      "width": 24,
    }
  }
/>
`;

exports[`Spacer Component renders with all size variants and both directions 5`] = `
<View
  style={
    {
      "height": undefined,
      "width": 32,
    }
  }
/>
`;

exports[`Spacer Component renders with all size variants and both directions 6`] = `
<View
  style={
    {
      "height": undefined,
      "width": 48,
    }
  }
/>
`;

exports[`Spacer Component renders with all size variants and both directions 7`] = `
<View
  style={
    {
      "height": 4,
      "width": undefined,
    }
  }
/>
`;

exports[`Spacer Component renders with all size variants and both directions 8`] = `
<View
  style={
    {
      "height": 8,
      "width": undefined,
    }
  }
/>
`;

exports[`Spacer Component renders with all size variants and both directions 9`] = `
<View
  style={
    {
      "height": 16,
      "width": undefined,
    }
  }
/>
`;

exports[`Spacer Component renders with all size variants and both directions 10`] = `
<View
  style={
    {
      "height": 24,
      "width": undefined,
    }
  }
/>
`;

exports[`Spacer Component renders with all size variants and both directions 11`] = `
<View
  style={
    {
      "height": 32,
      "width": undefined,
    }
  }
/>
`;

exports[`Spacer Component renders with all size variants and both directions 12`] = `
<View
  style={
    {
      "height": 48,
      "width": undefined,
    }
  }
/>
`;

exports[`Spacer Component renders with custom numeric size 1`] = `
<View
  style={
    {
      "height": 20,
      "width": undefined,
    }
  }
/>
`;

exports[`Spacer Component renders with predefined sizes 1`] = `
<View
  style={
    {
      "height": 4,
      "width": undefined,
    }
  }
/>
`;

exports[`Spacer Component renders with predefined sizes 2`] = `
<View
  style={
    {
      "height": 8,
      "width": undefined,
    }
  }
/>
`;

exports[`Spacer Component renders with predefined sizes 3`] = `
<View
  style={
    {
      "height": 16,
      "width": undefined,
    }
  }
/>
`;

exports[`Spacer Component renders with predefined sizes 4`] = `
<View
  style={
    {
      "height": 24,
      "width": undefined,
    }
  }
/>
`;

exports[`Spacer Component renders with predefined sizes 5`] = `
<View
  style={
    {
      "height": 32,
      "width": undefined,
    }
  }
/>
`;

exports[`Spacer Component renders with predefined sizes 6`] = `
<View
  style={
    {
      "height": 48,
      "width": undefined,
    }
  }
/>
`;
